overflow corrected

--- a/faq-accordion-card-main/style.css
+++ b/faq-accordion-card-main/style.css
@@ -66,6 +66,7 @@ h4 {
   background: #fff;
   box-shadow: 0px 50px 50px -20px rgba(53, 18, 122, 0.5);
   display: flex;
+  overflow: hidden;
   position: static;
 }
 
